<resources>
    <string name="app_name">CipherChat</string>
    <string name="empty_fields">Empty Credentials! Please try again</string>
    <string name="success_login">Access Granted</string>
    <string name="wrong_credentials">Access Denied! Please check your credentials</string>
    <string name="logging_in">Granting Access</string>
    <string name="empty_details">Please enter your personal details</string>
    <string name="short_password">Your password should have a minimum of 8 Characters</string>
    <string name="creating_account">Creating Account</string>
    <string name="success_signup">Access Granted</string>
    <string name="signup_error">Something Wrong Happened during Registration. Please Confirm that you have entered your correct Personal Details</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_dashboard">Profile</string>
    <string name="welcome">Welcome to Cipher Chat</string>
    <string name="create_account">Create Account</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="btn_create_account">Create Account</string>
    <string name="already_have_an_account">Have an account? Login Here</string>
    <string name="contact">712345678</string>
    <string name="login">Login To Your Account</string>
    <string name="don_t_have_an_account">No account? Register here</string>
    <string name="default_notification_channel_id">PushNotifications</string>
    <string name="action_settings">Settings</string>
    <string name="create_chat_room">Create Chat Room</string>
    <string name="roomname">RoomName</string>
    <string name="create">Create</string>
    <string name="creating_chat_room">Creating Chat Room</string>
    <string name="success_create_chat_room">Chat room successfully created</string>
    <string name="new_chat_room">New Chat Room</string>
    <string name="btn_refresh">Refresh</string>
    <string name="phone_number">Contact</string>
</resources>